SDF: converted to plugin does not yet work completely...

--- a/.project
+++ b/.project
@@ -8,7 +8,22 @@
 	</projects>
 	<buildSpec>
 		<buildCommand>
+			<name>de.tud.stg.tigerseye.eclipse.core.tigerseyeBuilder</name>
+			<arguments>
+			</arguments>
+		</buildCommand>
+		<buildCommand>
 			<name>org.eclipse.jdt.core.javabuilder</name>
+			<arguments>
+			</arguments>
+		</buildCommand>
+		<buildCommand>
+			<name>org.eclipse.pde.ManifestBuilder</name>
+			<arguments>
+			</arguments>
+		</buildCommand>
+		<buildCommand>
+			<name>org.eclipse.pde.SchemaBuilder</name>
 			<arguments>
 			</arguments>
 		</buildCommand>
@@ -16,5 +31,7 @@
 	<natures>
 		<nature>org.eclipse.jdt.groovy.core.groovyNature</nature>
 		<nature>org.eclipse.jdt.core.javanature</nature>
+		<nature>org.eclipse.pde.PluginNature</nature>
+		<nature>de.tud.stg.tigerseye.eclipse.core.tigerseyeNature</nature>
 	</natures>
 </projectDescription>
