renaming to fully qualified name moving test related classes to testfragment

--- a/de.tud.stg.tigerseye.sdfdsl.tests/.project
+++ b/de.tud.stg.tigerseye.sdfdsl.tests/.project
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>grammarware</name>
+	<name>de.tud.stg.tigerseye.sdfdsl.tests</name>
 	<comment></comment>
 	<projects>
-		<project>parlex</project>
-		<project>tigerseye</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
@@ -24,8 +22,7 @@
 		</buildCommand>
 	</buildSpec>
 	<natures>
-		<nature>org.eclipse.jdt.groovy.core.groovyNature</nature>
-		<nature>org.eclipse.jdt.core.javanature</nature>
 		<nature>org.eclipse.pde.PluginNature</nature>
+		<nature>org.eclipse.jdt.core.javanature</nature>
 	</natures>
 </projectDescription>
