--- a/de.tud.stg.tigerseye.sdfdsl/.project
+++ b/de.tud.stg.tigerseye.sdfdsl/.project
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>grammarware.tests</name>
+	<name>de.tud.stg.tigerseye.sdfdsl</name>
 	<comment></comment>
 	<projects>
+		<project>parlex</project>
+		<project>tigerseye</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
@@ -22,7 +24,8 @@
 		</buildCommand>
 	</buildSpec>
 	<natures>
-		<nature>org.eclipse.pde.PluginNature</nature>
+		<nature>org.eclipse.jdt.groovy.core.groovyNature</nature>
 		<nature>org.eclipse.jdt.core.javanature</nature>
+		<nature>org.eclipse.pde.PluginNature</nature>
 	</natures>
 </projectDescription>
