SDF: Add examples for AST construction

--- a/de.tud.stg.tigerseye.sdfdsl.languagetestbench/.classpath
+++ b/de.tud.stg.tigerseye.sdfdsl.languagetestbench/.classpath
@@ -4,6 +4,9 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry exported="true" kind="con" path="GROOVY_SUPPORT"/>
 	<classpathentry exported="true" kind="con" path="TIGERSEYE_SUPPORT"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/de.tud.stg.tigerseye"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/de.tud.stg.tigerseye.sdfdsl"/>
 	<classpathentry kind="src" path="src-tigerseye"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/treeviewer"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
